--- a/index.html
+++ b/index.html
@@ -5,11 +5,51 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./CSS/styles.css">
 </head>
 <body>
-    <nav></nav>
-    <header></header>
-    <main></main>
-    <footer></footer>
+    <div class="background">
+        <div class="outerBlock flexContainer">
+            <nav>
+                <a href="index.html" class="alllinks shaddow"><b>Buy Garazh</b></a>
+                <a href="#" class="alllinks unusable"><b><del>About Us</del></b></a>
+                <a href="#" class="alllinks unusable"><b><del>Price</del></b></a>
+                <a href="#" class="alllinks unusable"><b><del>Contacts</del></b></a>
+            </nav>
+            <header>
+                <h1>Продам Гараж</h1>
+                <div class="image"><img title="Очень красивый" src="./images/Garazh.jpeg" alt="Garazh" width="1200"></div>
+            </header>
+            <main>
+                <h1 class="h1P">Плюсы:</h1>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis nisi, odio aut exercitationem cumque nulla aliquid doloremque ipsa suscipit, quibusdam consequatur deleniti facere. Ut eius corrupti nulla dolorem nam, unde id amet accusantium molestias laudantium impedit tempore sapiente soluta officiis culpa distinctio cupiditate illum nemo repellendus dolore, aspernatur quas necessitatibus? Rem, nihil exercitationem a maiores odio velit aut, accusamus numquam nostrum laboriosam beatae labore quia voluptatibus ab mollitia fuga. Corrupti alias sequi ducimus ipsa eaque animi ipsum sed voluptas atque amet placeat, aliquid quibusdam provident exercitationem quo! Dolorum libero alias delectus, veniam officiis quod iusto esse culpa reiciendis accusantium illum explicabo voluptate sequi vitae corrupti sit eius aliquid velit optio ipsum tenetur, fuga eligendi quis. Autem eum culpa magni? Rem atque repellendus aspernatur delectus maiores sapiente repellat, adipisci tempora quod odit deserunt. Aspernatur rem accusantium laudantium quibusdam rerum! Ea, dolor atque repudiandae, magnam, iste facere accusamus totam autem ipsum culpa numquam. Dolores repellat eos voluptate itaque ratione blanditiis tempore aperiam assumenda dolore, quisquam corporis praesentium! Saepe ratione enim perferendis est! Nobis consequatur itaque consectetur in ab, distinctio minus dicta debitis optio esse unde rerum nesciunt rem saepe laborum. Accusantium odio consectetur doloremque vel, iusto, eaque officiis excepturi magnam dolor cupiditate recusandae nisi totam at quibusdam voluptatum ratione! Nam, eaque, assumenda placeat sit laborum ex voluptatibus quo amet tempora veritatis error fugiat quisquam ipsa deserunt? Ducimus voluptatum, nesciunt cumque est, nulla architecto odit at quaerat eos officiis inventore distinctio eum dolorum? Odio quibusdam minima ex vel illo commodi. Quidem porro quisquam dolorem, hic dolores expedita quae itaque officia quos molestiae! Facere repellat tenetur totam temporibus doloribus repellendus, placeat soluta. Omnis at sequi minus, nesciunt maxime provident itaque adipisci laboriosam eveniet facilis atque nisi aliquam quo eius ipsa ex aperiam quos cumque voluptatum pariatur non. Accusamus molestiae atque repudiandae aperiam, expedita perferendis.</p>
+
+                <h1 class="h1P">
+                    <del>Минусы</del>
+                </h1>
+<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facilis reprehenderit delectus velit aperiam necessitatibus, repellat quasi ad? Inventore voluptate, voluptates velit quia repellendus nostrum. Sunt omnis minima natus officia repellat totam error quos autem dolorum sit temporibus dolor eveniet modi animi, debitis illo saepe dolorem ratione, rem laboriosam harum quidem expedita facilis! Odio, accusantium non adipisci cum iure reprehenderit libero repellendus atque eaque earum minus eius et ex ea voluptatibus at consectetur cumque maiores repudiandae natus fuga asperiores ratione sint praesentium. Vel, magnam? Illo doloremque cumque cupiditate amet quod praesentium porro fugiat voluptatum obcaecati iusto. Distinctio, soluta quasi officia dolorum ullam atque nihil, repellat exercitationem, odit veniam quaerat molestias quam vitae recusandae tempore voluptatem voluptatum in illo quia molestiae harum! Aut, architecto cupiditate dolorum ut excepturi optio cum magnam, debitis consectetur quo corporis quam nisi distinctio illo necessitatibus doloremque molestiae error culpa perspiciatis nihil quos quasi fuga deserunt. Ducimus voluptate, autem natus aspernatur inventore quam magni impedit itaque explicabo maiores repudiandae ex fugit repellendus quo officiis cumque repellat quas doloribus perspiciatis dolor in quidem optio voluptates ut? Error at, consequuntur totam perspiciatis porro aliquid accusamus? Quidem, eaque in! Pariatur voluptatem at alias porro accusantium et aspernatur nesciunt ducimus illo laudantium!</p>
+            </main>
+            <footer>
+                <div class="footerOne">
+                    <div class="footerInside1">
+                        <h1><a href="#">Contact Us</a></h1>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur porro velit dolorum molestias blanditiis! Pariatur, quisquam consectetur? Tempore sit error deserunt fugiat voluptate? Earum enim labore nemo iste recusandae velit!
+                    </div>
+                    <div class="footerInside2">
+                        <h1><a href="#">About Our Company</a></h1>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum, vero. Accusantium eos voluptate consequatur debitis architecto quibusdam possimus, explicabo nobis quos minus inventore facere quas repellat sequi beatae reprehenderit amet! Laboriosam magnam veniam expedita a repellendus voluptas debitis ut? Atque sunt dignissimos perspiciatis cum qui maxime eveniet, sapiente eos delectus aliquid id et odit neque incidunt ipsum ad voluptates blanditiis ratione tempora. Eius est ullam debitis nisi, ipsa harum consequuntur dolorem similique magnam adipisci labore consectetur modi a libero quae incidunt et, molestias sapiente sed. Ea, explicabo repellendus. Et deleniti iusto magnam omnis quos laboriosam ratione explicabo doloribus voluptatem mollitia.
+                    </div>
+                </div>
+                <div class="footerTwo">
+                    <div class="footerInside3">
+                        Acme Web Solutions
+                    </div>
+                    <div class="footerInside4">
+                        Project By Me
+                    </div>
+                </div>
+            </footer>
+        </div>
+    </div> 
 </body>
 </html>
