--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./CSS/styles.css">
 </head>
 <body>
-    <div class="background">
+    <!-- тут сначала кое что было, но это оказалось не нужным, поэтому теперь этого нет. из за этого все что ниже сдвинуто на доп. секцию. как все сдвинуть разом я не знаю, а вручную-по одному лень, оставлю так -->
         <div class="outerBlock flexContainer">
             <nav>
                 <a href="index.html" class="alllinks shaddow"><b>Buy Garazh</b></a>
@@ -27,7 +27,7 @@
                 <h1 class="h1P">
                     <del>Минусы</del>
                 </h1>
-<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facilis reprehenderit delectus velit aperiam necessitatibus, repellat quasi ad? Inventore voluptate, voluptates velit quia repellendus nostrum. Sunt omnis minima natus officia repellat totam error quos autem dolorum sit temporibus dolor eveniet modi animi, debitis illo saepe dolorem ratione, rem laboriosam harum quidem expedita facilis! Odio, accusantium non adipisci cum iure reprehenderit libero repellendus atque eaque earum minus eius et ex ea voluptatibus at consectetur cumque maiores repudiandae natus fuga asperiores ratione sint praesentium. Vel, magnam? Illo doloremque cumque cupiditate amet quod praesentium porro fugiat voluptatum obcaecati iusto. Distinctio, soluta quasi officia dolorum ullam atque nihil, repellat exercitationem, odit veniam quaerat molestias quam vitae recusandae tempore voluptatem voluptatum in illo quia molestiae harum! Aut, architecto cupiditate dolorum ut excepturi optio cum magnam, debitis consectetur quo corporis quam nisi distinctio illo necessitatibus doloremque molestiae error culpa perspiciatis nihil quos quasi fuga deserunt. Ducimus voluptate, autem natus aspernatur inventore quam magni impedit itaque explicabo maiores repudiandae ex fugit repellendus quo officiis cumque repellat quas doloribus perspiciatis dolor in quidem optio voluptates ut? Error at, consequuntur totam perspiciatis porro aliquid accusamus? Quidem, eaque in! Pariatur voluptatem at alias porro accusantium et aspernatur nesciunt ducimus illo laudantium!</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facilis reprehenderit delectus velit aperiam necessitatibus, repellat quasi ad? Inventore voluptate, voluptates velit quia repellendus nostrum. Sunt omnis minima natus officia repellat totam error quos autem dolorum sit temporibus dolor eveniet modi animi, debitis illo saepe dolorem ratione, rem laboriosam harum quidem expedita facilis! Odio, accusantium non adipisci cum iure reprehenderit libero repellendus atque eaque earum minus eius et ex ea voluptatibus at consectetur cumque maiores repudiandae natus fuga asperiores ratione sint praesentium. Vel, magnam? Illo doloremque cumque cupiditate amet quod praesentium porro fugiat voluptatum obcaecati iusto. Distinctio, soluta quasi officia dolorum ullam atque nihil, repellat exercitationem, odit veniam quaerat molestias quam vitae recusandae tempore voluptatem voluptatum in illo quia molestiae harum! Aut, architecto cupiditate dolorum ut excepturi optio cum magnam, debitis consectetur quo corporis quam nisi distinctio illo necessitatibus doloremque molestiae error culpa perspiciatis nihil quos quasi fuga deserunt. Ducimus voluptate, autem natus aspernatur inventore quam magni impedit itaque explicabo maiores repudiandae ex fugit repellendus quo officiis cumque repellat quas doloribus perspiciatis dolor in quidem optio voluptates ut? Error at, consequuntur totam perspiciatis porro aliquid accusamus? Quidem, eaque in! Pariatur voluptatem at alias porro accusantium et aspernatur nesciunt ducimus illo laudantium!</p>
             </main>
             <footer>
                 <div class="footerOne">
@@ -50,6 +50,6 @@
                 </div>
             </footer>
         </div>
-    </div> 
+    
 </body>
 </html>
